intel/bench_214/extr_.linuxdriversstagingrtl8188euhalrf.c_get_rx_power_val_by_reg_with_main/log.txt
bench_214/extr_.linuxdriversstagingrtl8188euhalrf.c_get_rx_power_val_by_reg_with_main/extr_.linuxdriversstagingrtl8188euhalrf.c_get_rx_power_val_by_reg_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
